# azora

./: .azora-services.json  .azora-workspace  .commitlintrc.json  .dockerignore  .env.azora  .env.example  .env.production  .env.production.example  .env.security.example  .env.temp  .env.template  .env.test  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .gitmessage  .gitmodules  .jsdoc-template.js  .markdownlint.json  .prettierignore  .prettierrc.json  .vercelignore  2-HOUR-LAUNCH-SPRINT.md  ACADEMY-COMPLETE-INTEGRATION-PLAN.md  ACKNOWLEDGMENTS.md  ACTION-PLAN.md  ACTUALLY-WORKING.md  AFRICA-FIRST-MANIFESTO.md  AFRICA-INFRASTRUCTURE-COMPLETE.md  AGENT-1-PHASE-1B-COMPLETE.md  AGENT-1-PRODUCTION-DEPLOYMENT-COMPLETE.md  AGENT-1-STATUS-REPORT.md  AGENT-2-ENTERPRISE-UI-COMPLETE.md  AGENT-2-MOBILE-COMPLETE.md  AGENT-2-MOBILE-COMPLETION-REPORT.md  AGENT-2-NEXT-DIRECTIVE.md  AGENT-2-STATUS.md  AGENT-3-AGENT-4-INTEGRATION-COMPLETE.md  AGENT-3-EXECUTION-COMPLETE.md  (+533 more)
.husky/: commit-msg  (+3 more)
services/azora-os-2/: README.md  package.json  pyproject.toml
services/azora-os-2/ai-models/: index.py  recommendationModel.py  visionModel.py
services/azora-os-2/config/: app.config.json  db.config.json  frontend.config.json  scripts.config.json
services/azora-os-2/contracts/: authContract.ts  storageContract.ts  userContract.ts
services/azora-os-2/docs/: api.md  configuration.md  contracts.md  deployment.md  frontend.md  testing.md
services/azora-os-2/prisma/: schema.prisma
services/azora-os-2/scripts/: migrate.sh
services/azora-os-2/services/: index.ts  storageService.ts
(+11553 files in other folders)
