[tool] Create the file /azora-os/azora-os/pyproject.toml with the following contents:

[tool.poetry]
name = "azora-os"
version = "0.1.0"
description = "Azora OS project for blockchain and AI services"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
numpy = "^1.21"
pandas = "^1.3"
scikit-learn = "^0.24"
tensorflow = "^2.5"
torch = "^1.9"
requests = "^2.25"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.7b0"
mypy = "^0.910"
flake8 = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"